force-app/main/default/objects/Test_Object1__c/Test_Object1__c.object-meta.xml
<CustomObject>
    <label>Test Object 1</label>
    <nameField>
        <displayFormat>R - {0000}</displayFormat>
        <label>Test Object 1 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Object 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>