force-app/main/default/objects/Test_Object1__c/fields/Test_Object_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Object_1_Date__c</fullName>
    <label>Test Object 1 Date</label>
    <type>Date</type>
</CustomField>