force-app/main/default/objects/Test_Object1__c/fields/Test_Object_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Object_1_Name__c</fullName>
    <label>Test Object 1 Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>