force-app/main/default/objects/Test_Object1__c/fields/Test_Object_1_Pick__c.field-meta.xml
<CustomField>
    <fullName>Test_Object_1_Pick__c</fullName>
    <label>Test Object 1 Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>